fix: add some extra space between other gear label and input

--- a/src/actor-sheet/components/equipment.scss
+++ b/src/actor-sheet/components/equipment.scss
@@ -9,6 +9,7 @@
     gap: 16px;
     .other {
       flex-grow: 1;
+      gap: 12px;
       input {
         text-align: left;
       }
